fix: fix SwitchLanguage click missing setVisible

--- a/packages/leaa-dashboard/src/components/SwitchLanguage/style.module.less
+++ b/packages/leaa-dashboard/src/components/SwitchLanguage/style.module.less
@@ -6,7 +6,7 @@
 }
 
 .switch-language-popover {
-  min-width: 150px;
+  min-width: 170px;
 }
 
 .switch-language-selected {
